<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_movies"
        android:icon="@drawable/ic_movies"
        android:menuCategory="secondary"
        android:title="@string/title_movies" />

    <item
        android:id="@+id/navigation_tv_series"
        android:icon="@drawable/ic_tv_series"
        android:menuCategory="secondary"
        android:title="@string/title_tv_series" />

    <item
        android:id="@+id/navigation_watch_list"
        android:icon="@drawable/ic_watch_list"
        android:menuCategory="secondary"
        android:title="@string/title_watch_list" />

    <item
        android:id="@+id/navigation_search"
        android:icon="@drawable/ic_search"
        android:menuCategory="secondary"
        android:title="@string/title_search" />

</menu>